# magi-gemini-orchestrator

./: .env.example  .gitignore  GOOGLE_AI_STUDIO_SETUP.md  MAGI-System-Google-Gen-AI-Adaptation-Report.md  README.md  pyproject.toml  test_gemini3.py
src/magi_orchestrator/: __init__.py  cache.py  cli.py  client.py  config.py  orchestrator.py
src/magi_orchestrator/agents/: __init__.py  balthasar.py  base.py  casper.py  melchior.py
tests/: test_integration.py  test_orchestrator.py
